--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "mustache/mustache": "~2.5"
+    "mustache/mustache": "~2.5",
+    "firebase/php-jwt": "dev-main"
   },
   "autoload" : {
     "psr-4" : {
